# TradeMe

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  README.md  about-me.md  data-providers.md  package.json  pnpm-lock.yaml  trademe.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  eslint.config.js  package.json  tsconfig.json
apps/api/config/: external_signals.yaml
apps/api/scripts/: gen-parity.ts
apps/api/src/: app.ts  config.ts  server.ts  ws.ts
apps/api/test/: alerts-route.test.ts  backoff.test.ts  backtest-route.test.ts  (+20 more)
apps/quant/: Dockerfile  README.md  pyproject.toml
apps/quant/tests/: test_backtest.py  test_calibration.py  test_ensemble.py  test_external_signals.py  test_market.py  test_optimize.py  test_parity.py  test_smoke.py  test_walkforward.py
apps/quant/trademe_quant/: __init__.py  backtest.py  calibration.py  config.py  db.py  decision.py  ensemble.py  external_signals.py  indicators.py  inference.py  macro.py  mlflow_setup.py  optimize.py  run_backtest.py  run_calibration.py  run_optimize.py  seed.py  service.py  walkforward.py
apps/quant/trademe_quant/market/: __init__.py  binance.py  normalize.py
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  tsconfig.json
artifacts/: ensemble.yaml
docs/: arquitectura.md  backlog.md  backtesting.md  calibracion.md  como-funciona.md  contrato.md  ensemble.md  indicadores.md  macro.md  metodologia.md  notificaciones.md  optimizacion.md  pwa-push.md  riesgo.md  tradingview.md
infra/: docker-compose.yml
(+63 files in other folders)
