[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trademe-quant"
version = "0.9.0"
description = "TradeMe quant (Python): backtesting, optimización y entrenamiento/calibración offline. Exporta artefactos para apps/api."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
dependencies = [
  "mlflow-skinny>=2.9,<3",
  "psycopg[binary]>=3.1,<4",
  "numpy>=1.24",
  "pyyaml>=6",
  "optuna>=3.6,<5",
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24",
  "mypy>=1.11"
]

[tool.setuptools.packages.find]
include = ["trademe_quant*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["trademe_quant", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
